Rename property to correct name

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -21,7 +21,7 @@
         <ion-button *ngIf="!typeChosen"
                     (click)="submitCredentialType()"
                     [disabled]="typeChosen"
-                    size="block"
+                    expand="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </p>
   </dialogue-turn>
@@ -59,7 +59,7 @@
         <ion-button *ngIf="credentialTypeChoiceNew && !isDisabled"
                     (click)="submitCredentialTypeNew()"
                     [disabled]="isDisabled"
-                    size="block"
+                    expand="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </p>
   </dialogue-turn>
