--- a/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
+++ b/interfaces/PA-App/src/app/personal-components/identity-form/identity-form.component.html
@@ -40,7 +40,7 @@
       <div class="ion-margin-top">
         <ion-button *ngIf="name && dob && !isDisabled"
                     type="submit"
-                    size="block"
+                    expand="block"
         >{{ 'personal.identity-form.submit-button'|translate }}</ion-button>
       </div>
     </form>
