--- a/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
+++ b/interfaces/PA-App/src/app/personal-components/initial-needs/initial-needs.component.html
@@ -20,7 +20,7 @@
          <p class="ion-margin-top">
            <ion-button type="submit"
                        *ngIf="needs && !isDisabled"
-                       size="block"
+                       expand="block"
                        [disabled]="isDisabled"
            >{{ 'personal.initial-needs.submit'|translate }}</ion-button>
          </p>
