--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -25,7 +25,7 @@
     <div class="ion-margin-top">
       <ion-button *ngIf="countryChoice && !isDisabled"
                   (click)="submitCountry()"
-                  size="block"
+                  expand="block"
                   [disabled]="isDisabled"
       >{{ 'shared.submit-button'|translate }}</ion-button>
     </div>
