--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -22,7 +22,7 @@
                     *ngIf="languageChoice && !isDisabled"
                     (click)="submitLanguage()"
                     [disabled]="isDisabled"
-                    size="block"
+                    expand="block"
         >{{ 'shared.submit-button'|translate }}</ion-button>
       </div>
     </form>
