--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -33,7 +33,7 @@
                   (click)="submitProgram()"
                   [disabled]="isDisabled"
                   type="submit"
-                  size="block"
+                  expand="block"
       >{{ 'shared.submit-button'|translate }}</ion-button>
     </div>
   </dialogue-turn>
