Fixed a bug that did not show conversation texts in the rgiht way

--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -1,15 +1,21 @@
 <section>
-    <dialogue-turn [hidden]="!creatingProof">
+    <dialogue-turn *ngIf="creatingProof"
+                   [isSpoken]="creatingProof"
+    >
         <p>
             {{ 'personal.handle-proof.creating'|translate }}
         </p>
     </dialogue-turn>
-    <dialogue-turn [hidden]="!inclusionStatusNegative">
+    <dialogue-turn *ngIf="inclusionStatusNegative"
+                   [isSpoken]="inclusionStatusNegative"
+    >
         <p>
             {{ 'personal.handle-proof.inclusion-status-negative'|translate }}
         </p>
     </dialogue-turn>
-    <dialogue-turn [hidden]="!inclusionStatusPositive">
+    <dialogue-turn *ngIf="inclusionStatusPositive"
+                   [isSpoken]="inclusionStatusPositive"
+    >
         <p>
             {{ 'personal.handle-proof.inclusion-status-positive'|translate }}
         </p>
