--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,13 +1,13 @@
 <section>
-  <dialogue-turn *ngIf="!credentialReceived"
-                 [isSpoken]="!credentialReceived"
+  <dialogue-turn *ngIf="credentialReceived"
+                 [isSpoken]="credentialReceived"
   >
     <p>
       {{ 'personal.store-credential.received'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn *ngIf="!credentialReceived"
-                 [isSpoken]="!credentialReceived"
+  <dialogue-turn *ngIf="credentialStored"
+                 [isSpoken]="credentialStored"
   >
     <p>
       {{ 'personal.store-credential.stored'|translate }}
