--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -37,6 +37,15 @@
   </ion-row>
   <ion-row>
     <ion-button color="tertiary" size="small" fill="clear"
+                title="Toggle state: loading"
+                (click)="conversationService.state.isLoading=!conversationService.state.isLoading;"
+    >
+      <ion-icon size="small" slot="icon-only"
+                [name]="conversationService.state.isLoading ? 'pause' : 'hourglass'"
+      ></ion-icon>
+    </ion-button>
+
+    <ion-button color="tertiary" size="small" fill="clear"
                 title="Scroll to bottom"
                 (click)="scrollDown()"
     >
@@ -50,6 +59,11 @@
 
   <div #conversationContainer></div>
 
-  <!-- Make room to always be able to scroll -->
-  <div id="scroll-space-placeholder" style="height: 50vh;"></div>
+  <div class="loading-indicator">
+    <ion-spinner name="dots"
+                 *ngIf="conversationService?.state?.isLoading"
+                 class="loading-indicator--spinner"
+    ></ion-spinner>
+  </div>
+
 </ion-content>
