Toggle loading-indicator around server-calls

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -61,7 +61,7 @@
 
   <div class="loading-indicator">
     <ion-spinner name="dots"
-                 *ngIf="conversationService?.state?.isLoading"
+                 [hidden]="!conversationService.state.isLoading"
                  class="loading-indicator--spinner"
     ></ion-spinner>
   </div>
