--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -8,6 +8,7 @@
   </dialogue-turn>
   <dialogue-turn *ngIf="credentialStored"
                  [isSpoken]="credentialStored"
+                 isConnected="true"
   >
     <p>
       {{ 'personal.store-credential.stored'|translate }}
