--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -4,7 +4,10 @@
       {{ 'personal.select-appointment.introduction'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn actor="self">
+  <dialogue-turn actor="self"
+                 *ngIf="timeslots"
+                 [isSpoken]="timeslots"
+  >
     <ion-radio-group name="timeslots"
                      (ionChange)="changeTimeslot($event)"
     >
@@ -110,16 +113,31 @@
       </ion-button>
     </p>
   </dialogue-turn>
-  <dialogue-turn *ngIf="!qrDataShow"
-                 [isSpoken]="!qrDataShow"
+  <dialogue-turn [actor]="ngo"
+                 *ngIf="qrDataShow"
+                 [isSpoken]="qrDataShow"
   >
     <p>
-        {{ 'personal.select-appointment.qr-code'|translate }}
+      {{ 'personal.select-appointment.qr-code'|translate }}
     </p>
-    <div text-center margin-vertical style="margin: 1em auto; max-width: 360px;"
-        *ngIf="qrDataString"
+    <div *ngIf="qrDataString"
+         text-center
+         margin-vertical
+         style="margin: 1em auto; max-width: 360px;"
     >
-      <qrcode [qrdata]="this.qrDataString" size="360" level="H"></qrcode>
+      <!--
+        {#
+          QR-code colors are inverted to be scanned more easily.
+          `#001e60` is `--ion-color-dark`
+        #}
+      -->
+      <qrcode [qrdata]="qrDataString"
+              [attr.title]=""
+              size="360"
+              level="H"
+              colorlight="#001e60"
+              colordark="#ffffff"
+      ></qrcode>
     </div>
   </dialogue-turn>
 </section>
