--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -31,6 +31,7 @@
           <ion-button *ngIf="create && !initialInput"
                       (click)="initialInput=true;"
                       type="button"
+                      expand="block"
           >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
         </div>
         <div *ngIf="initialInput">
@@ -47,6 +48,7 @@
             <ion-button *ngIf="create && confirm && !isDisabled"
                         [disabled]="isInProgress || isDisabled"
                         type="submit"
+                        expand="block"
             >{{ 'personal.create-password.submit-password'|translate }}</ion-button>
           </div>
         </div>
@@ -55,6 +57,8 @@
     <dialogue-turn *ngIf="isDisabled"
                    [isSpoken]="isDisabled"
     >
-      {{ 'personal.create-password.conclusion'|translate }}
+      <p>
+        {{ 'personal.create-password.conclusion'|translate }}
+      </p>
     </dialogue-turn>
   </section>
