--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -14,11 +14,8 @@
     <ion-avatar *ngIf="actor === 'self'">
       <img src="../../../assets/avatar.svg">
     </ion-avatar>
-    <ion-avatar *ngIf="actor === 'ho'" style="color:black; background:white; display:flex;">
-      <b style="margin:auto">HO</b>
-    </ion-avatar>
-    <ion-avatar *ngIf="actor !== 'system' && actor !== 'self' && actor !== 'ho'" style="color:black; background:white; display:flex;">
-      <b style="margin:auto">{{actor}}</b>
+    <ion-avatar *ngIf="actor !== 'system' && actor !== 'self'" style="color:black; background:white; display:flex;">
+      <b style="margin:auto">{{ actor }}</b>
     </ion-avatar>
   </div>
   <div class="dialogue-turn--content">
