Update texts in UI
Fixes AB#591

--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -3,6 +3,12 @@
       <p>
         {{ 'personal.create-password.introduction'|translate }}
       </p>
+      <p>
+        <ion-button type="button" size="small">
+          <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+          {{ 'personal.create-password.more-info-digital-id'|translate }}
+        </ion-button>
+      </p>
     </dialogue-turn>
     <dialogue-turn isConnected="true">
       <p>
