--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,12 +1,25 @@
 <section>
-  <dialogue-turn *ngIf="credentialReceived"
+  <dialogue-turn actor="NGO"
+                 *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
     <p>
+      {{ 'personal.store-credential.done'|translate }}
+    </p>
+  </dialogue-turn>
+  <br>
+  <br>
+  <dialogue-turn actor="self"
+                 *ngIf="credentialReceived"
+                 [isSpoken]="credentialReceived"
+                 isConnected="true"
+  >
+  <p>
       {{ 'personal.store-credential.received'|translate }}
     </p>
   </dialogue-turn>
-  <dialogue-turn *ngIf="credentialStored"
+  <dialogue-turn actor="self"
+                 *ngIf="credentialStored"
                  [isSpoken]="credentialStored"
                  isConnected="true"
   >
