--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -1,5 +1,5 @@
 <section #selectLanguage>
-  <dialogue-turn isConnected="true">
+  <dialogue-turn>
     <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
     <p>
       <ion-button type="button" size="small">
