--- a/interfaces/PA-App/src/app/tab1/tab1.page.html
+++ b/interfaces/PA-App/src/app/tab1/tab1.page.html
@@ -1,7 +1,6 @@
 <ion-header>
-  <ion-toolbar color="secondary">
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab One
     </ion-title>
   </ion-toolbar>
 </ion-header>
