--- a/interfaces/PA-App/src/theme/variables.scss
+++ b/interfaces/PA-App/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #2f4bfd;
+  --ion-color-primary-rgb: 47, 75, 253;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #324ae0;
+  --ion-color-primary-tint: #4c64fe;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
@@ -60,8 +60,8 @@
   --ion-color-dark-tint: #002370;
 
   /** medium **/
-  --ion-color-medium: #cccccc;
-  --ion-color-medium-rgb: 204, 204, 204;
+  --ion-color-medium: #e7e7e6;
+  --ion-color-medium-rgb: 231, 231, 230;
   --ion-color-medium-contrast: #ffffff;
   --ion-color-medium-contrast-rgb: 255, 255, 255;
   --ion-color-medium-shade: #aaaaaa;
