--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -19,5 +19,5 @@
 // Override default styles to emphasize where to input
 ion-input .native-input,
 ion-textarea .native-textarea {
-  border: 1px solid currentColor !important;
+  background-color: #DFE5FE !important;
 }
