--- a/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/PA-App/src/app/shared/dialogue-turn/dialogue-turn.component.html
@@ -8,11 +8,11 @@
      }"
 >
   <div class="dialogue-turn--actor">
-    <ion-avatar *ngIf="actor === 'system'">
+    <ion-avatar *ngIf="actor === 'system'" style="border-radius: 0 !important;">
       <img src="../../../assets/avatar--121.svg">
     </ion-avatar>
-    <ion-avatar *ngIf="actor === 'self'">
-      <img src="../../../assets/avatar.svg">
+    <ion-avatar *ngIf="actor === 'self'" style="background:#2f4bfd; display:flex;">
+      <ion-icon name="person" color="white" size="large" style="margin:auto;"></ion-icon>
     </ion-avatar>
     <ion-avatar *ngIf="actor !== 'system' && actor !== 'self'" style="color:black; background:white; display:flex;">
       <b style="margin:auto">{{ actor }}</b>
