--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs>
 
   <ion-tab-bar slot="top">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="globe"></ion-icon>
-      <ion-label>{{ 'WORLD'|translate }}</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="personal">
-      <ion-icon name="body"></ion-icon>
+    <ion-tab-button tab="personal" color="dark" layout="label-hide">
+      <ion-icon name="person" size="large"></ion-icon>
       <ion-label>{{ 'PERSONAL'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" disabled>
-      <ion-icon name="phone-portrait"></ion-icon>
+    <ion-tab-button tab="tab1" color="primary" layout="label-hide">
+      <ion-icon name="people" size="large"></ion-icon>
+      <ion-label>{{ 'WORLD'|translate }}</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab3" disabled layout="label-hide">
+      <ion-icon name="cash" size="large"></ion-icon>
       <ion-label>{{ 'DEVICE'|translate }}</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
