--- a/interfaces/PA-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.scss
@@ -6,20 +6,20 @@ ion-tab-bar {
 ion-tab-button {
 
   &#tab-button-tab1 {
-    color: var(--ion-color-secondary-contrast);
-    background: var(--ion-color-secondary-tint);
-
-    &.tab-selected {
-      background: var(--ion-color-secondary);
-    }
-  }
-
-  &#tab-button-personal {
     color: var(--ion-color-primary-contrast);
     background: var(--ion-color-primary-tint);
 
     &.tab-selected {
       background: var(--ion-color-primary);
+    }
+  }
+
+  &#tab-button-personal {
+    color: var(--ion-color-dark-contrast);
+    background: var(--ion-color-dark-tint);
+
+    &.tab-selected {
+      background: var(--ion-color-dark);
     }
   }
 }
