Make submit-button only appear after choice of credential-type
+ Simplify component logic - move into template

--- a/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
+++ b/interfaces/PA-App/src/app/personal-components/choose-credential-type/choose-credential-type.component.html
@@ -5,20 +5,31 @@
     </p>
   </dialogue-turn>
   <dialogue-turn actor="self">
-      <ion-radio-group [(ngModel)}]="credentialTypeChoice"
-                       (ionChange)="changeCredentialType($event, 'apply-to-program')"
-      >
-        <ion-item *ngFor="let credentialType of credentialTypes"
-                  color="light"
+      <ion-radio-group (ionChange)="changeCredentialType($event.detail.value)">
+        <ion-item color="light"
                   class="ion-no-padding ion-text-wrap"
-                  [disabled]="credentialType.disabled || typeChosen"
+                  [disabled]="typeChosen"
         >
-          <ion-label>{{ credentialType.credentialType }}</ion-label>
-          <ion-radio value="{{ credentialType.id }}"></ion-radio>
+          <ion-label>{{ 'personal.choose-credential-type.apply-to-program'|translate }}</ion-label>
+          <ion-radio value="apply-to-program"></ion-radio>
+        </ion-item>
+        <ion-item color="light"
+                  class="ion-no-padding ion-text-wrap"
+                  [disabled]="typeChosen"
+        >
+          <ion-label>{{ 'personal.choose-credential-type.create-id'|translate }}</ion-label>
+          <ion-radio value="create-id"></ion-radio>
+        </ion-item>
+        <ion-item color="light"
+                  class="ion-no-padding ion-text-wrap"
+                  [disabled]="true || typeChosen"
+        >
+          <ion-label>{{ 'personal.choose-credential-type.delete-id'|translate }}</ion-label>
+          <ion-radio value="delete-id"></ion-radio>
         </ion-item>
       </ion-radio-group>
       <p class="ion-margin-top">
-        <ion-button *ngIf="!typeChosen"
+        <ion-button *ngIf="credentialTypeChoice && !typeChosen"
                     (click)="submitCredentialType()"
                     [disabled]="typeChosen"
                     expand="block"
@@ -43,20 +54,18 @@
                  *ngIf="programChosen"
                  [isSpoken]="programChosen"
   >
-      <ion-radio-group [(ngModel)}]="credentialTypeChoiceNew"
-                       (ionChange)="changeCredentialType($event, 'create-id')"
-      >
+      <ion-radio-group (ionChange)="changeCredentialType($event.detail.value)">
         <ion-item color="light"
                   class="ion-no-padding ion-text-wrap"
         >
-          <ion-label>{{ 'personal.choose-credential-type.option2'|translate }}</ion-label>
+          <ion-label>{{ 'personal.choose-credential-type.create-id'|translate }}</ion-label>
           <ion-radio value="create-id"
                      [disabled]="isDisabled"
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
       <p class="ion-margin-top">
-        <ion-button *ngIf="credentialTypeChoiceNew && !isDisabled"
+        <ion-button *ngIf="credentialTypeChoice === 'create-id' && !isDisabled"
                     (click)="submitCredentialTypeNew()"
                     [disabled]="isDisabled"
                     expand="block"
