Add check for SameDay to change the syntax of appointment-dates/times

--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -19,7 +19,7 @@
           <p>
             {{ timeslot.startDate|date:dateFormat }}: {{ timeslot.startDate|date:timeFormat }}
             -
-            <span *ngIf="timeslot.startDate|date:dateFormat === timeslot.endDate|date:timeFormat">
+            <span *ngIf="!isSameDay(timeslot.startDate, timeslot.endDate)">
               <br>
               {{ timeslot.endDate|date:dateFormat }}:
             </span>
