Add input-field for AnswerType: Date

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -43,6 +43,14 @@
                    [disabled]="hasAnswered"
         ></ion-input>
       </div>
+      <div *ngSwitchCase="answerTypes.Date">
+        <ion-input type="date"
+                   placeholder="dd-mm-yyyy"
+                   [name]="question.code"
+                   (change)="changeAnswers($event)"
+                   [disabled]="hasAnswered"
+        ></ion-input>
+      </div>
       <div *ngSwitchDefault>
         <ion-input type="text"
                    [name]="question.code"
