--- a/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
@@ -3,10 +3,13 @@
     {{ 'personal.scan-qr.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
-    <ion-button (click)="scanQrCode()">{{ 'personal.scan-qr.scan-button'|translate }}</ion-button>
+    <ion-button expand="block" (click)="scanQrCode()">{{ 'personal.scan-qr.scan-button'|translate }}</ion-button>
   </dialogue-turn>
-  <dialogue-turn [hidden]="!did">
-    {{ 'personal.scan-qr.conclusion1'|translate }} {{did}} {{ 'personal.scan-qr.conclusion2'|translate }} {{programId}}.
+  <dialogue-turn [hidden]="!scanError">
+    {{ 'personal.scan-qr.error'|translate }}
+  </dialogue-turn>
+  <dialogue-turn [hidden]="!didResult">
+    {{ 'personal.scan-qr.conclusion'|translate }}
   </dialogue-turn>
 </section>
      
