AB#643 made tab1 account-tab

--- a/interfaces/AW-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/AW-App/src/app/tabs/tabs.page.scss
@@ -5,7 +5,7 @@ ion-tab-bar {
 
 ion-tab-button {
 
-  &#tab-button-tab1 {
+  &#tab-button-account {
     color: var(--ion-color-secondary-contrast);
     background: var(--ion-color-secondary-tint);
 
