--- a/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
+++ b/interfaces/AW-App/src/app/personal-components/scan-qr/scan-qr.component.html
@@ -8,8 +8,10 @@
   <dialogue-turn [hidden]="!scanError">
     {{ 'personal.scan-qr.error'|translate }}
   </dialogue-turn>
+    <dialogue-turn [hidden]="!unknownDidCombination">
+      {{ 'personal.scan-qr.unknownDidCombination'|translate }}
+    </dialogue-turn>
   <dialogue-turn [hidden]="!didResult">
     {{ 'personal.scan-qr.conclusion'|translate }}
   </dialogue-turn>
 </section>
-     
