AB#772 background account-tab to grey

--- a/interfaces/AW-App/src/app/account/account.page.html
+++ b/interfaces/AW-App/src/app/account/account.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="medium" class="ion-padding-vertical">
   <dialogue-turn [hidden]="isLoggedIn">
     {{ 'account.introduction'|translate }}
   </dialogue-turn>
