AB#798 changed 'personal' to 'validation'

--- a/interfaces/AW-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/AW-App/src/app/tabs/tabs.page.scss
@@ -14,7 +14,7 @@ ion-tab-button {
     }
   }
 
-  &#tab-button-personal {
+  &#tab-button-validation {
     color: var(--ion-color-primary-contrast);
     background: var(--ion-color-primary-tint);
 
