--- a/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
+++ b/interfaces/AW-App/src/app/validation-components/main-menu/main-menu.component.html
@@ -1,6 +1,6 @@
 <section #mainMenu>
   <dialogue-turn>
-    {{ 'personal.main-menu.introduction'|translate }}
+    {{ 'validation.main-menu.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
     <ion-radio-group (ionChange)="changeOption($event)"
