--- a/interfaces/AW-App/src/app/validation-components/view-appointments/view-appointments.component.html
+++ b/interfaces/AW-App/src/app/validation-components/view-appointments/view-appointments.component.html
@@ -1,6 +1,6 @@
 <section #viewAppointments>
   <dialogue-turn>
-    {{ 'personal.view-appointments.introduction'|translate }}
+    {{ 'validation.view-appointments.introduction'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self">
     <ion-radio-group (ionChange)="changeTimeslot($event)">
@@ -26,10 +26,10 @@
       </ion-item>
     </ion-radio-group>
     <br>
-    <ion-button [hidden]="!timeslotChoice" expand="block" (click)="submitTimeslot(timeslotChoice)">{{ 'personal.view-appointments.submit-button'|translate }}</ion-button>
+    <ion-button [hidden]="!timeslotChoice" expand="block" (click)="submitTimeslot(timeslotChoice)">{{ 'validation.view-appointments.submit-button'|translate }}</ion-button>
   </dialogue-turn>
   <dialogue-turn [hidden]="!timeslotSelected">
-    {{ 'personal.view-appointments.appointments'|translate }}
+    {{ 'validation.view-appointments.appointments'|translate }}
   </dialogue-turn>
   <dialogue-turn actor="self" [hidden]="!timeslotSelected">
     <ion-list>
@@ -40,7 +40,7 @@
         <ion-label>Person Affected #{{i+1}}: {{appointment.status}}</ion-label>
       </ion-item>
     </ion-list>
-    <ion-button expand="block" (click)="backMainMenu()">{{ 'personal.view-appointments.main-menu'|translate }}</ion-button>
+    <ion-button expand="block" (click)="backMainMenu()">{{ 'validation.view-appointments.main-menu'|translate }}</ion-button>
   </dialogue-turn>
 </section>
    
