--- a/interfaces/AW-App/src/app/validation/validation.page.html
+++ b/interfaces/AW-App/src/app/validation/validation.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      {{ 'PERSONAL'|translate }}
+      {{ 'VALIDATION'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
