--- a/interfaces/AW-App/src/app/tabs/tabs.page.html
+++ b/interfaces/AW-App/src/app/tabs/tabs.page.html
@@ -6,9 +6,9 @@
       <ion-label>{{ 'ACCOUNT'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="personal">
+    <ion-tab-button tab="validation">
       <ion-icon name="phone-portrait"></ion-icon>
-      <ion-label>{{ 'PERSONAL'|translate }}</ion-label>
+      <ion-label>{{ 'VALIDATION'|translate }}</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" disabled>
