AB#797 disable validation-tab when logged out

--- a/interfaces/AW-App/src/app/tabs/tabs.page.html
+++ b/interfaces/AW-App/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>{{ 'ACCOUNT'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="validation">
+    <ion-tab-button tab="validation" [disabled]="validationDisabled">
       <ion-icon name="phone-portrait"></ion-icon>
       <ion-label>{{ 'VALIDATION'|translate }}</ion-label>
     </ion-tab-button>
