AB#826 PA-app unequal password feedback

--- a/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-password/create-password.component.html
@@ -60,6 +60,13 @@
         </div>
       </form>
     </dialogue-turn>
+    <dialogue-turn *ngIf="unequalPasswords"
+                   [isSpoken]="unequalPasswords"
+    >
+      <p>
+        {{ 'personal.create-password.unequal-passwords'|translate }}
+      </p>
+    </dialogue-turn>
     <dialogue-turn *ngIf="isDisabled"
                    [isSpoken]="isDisabled"
     >
