AB#736 check on dob-input

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -76,6 +76,14 @@
     </p>
   </dialogue-turn>
   <dialogue-turn [actor]="program?.ngo"
+                 *ngIf="dobFeedback"
+                 [isSpoken]="dobFeedback"
+  >
+    <p>
+      {{ 'personal.enroll-in-program.dob-feedback'|translate }}
+    </p>
+  </dialogue-turn>
+  <dialogue-turn [actor]="program?.ngo"
                  *ngIf="hasAnswered"
                  [isSpoken]="hasAnswered"
   >
